# rswave

./: .gitignore  Cargo.toml  README.md  build_upload_rpi.sh  rswave_remote.service  rswave_server.service  rustfmt.toml
rpi_led_common/: Cargo.toml
rpi_led_common/src/: lib.rs  packets.rs
rpi_led_local/: Cargo.toml
rpi_led_local/src/: lib.rs  main.rs  runners.rs
rpi_led_remote/: Cargo.toml
rpi_led_remote/src/: app.rs  audio.rs  lib.rs  main.rs  net.rs  spotify.rs
rswave_common/: Cargo.toml
rswave_common/src/: lib.rs  packets.rs
rswave_remote/: Cargo.toml
rswave_remote/src/: app.rs  audio.rs  lib.rs  main.rs  net.rs  spotify.rs
rswave_remote/src/async_app/: app.rs  audio_collector.rs  audio_processor.rs  mod.rs  net.rs  spotify.rs
rswave_server/: Cargo.toml  build.rs
rswave_server/src/: app.rs  led_controllers.rs  lib.rs  main.rs  net.rs  runners.rs
