[package]
name = "rpi_led_remote"
version = "0.1.0"
authors = ["Lucas Malandrino <lucas.malandrino@gmail.com>"]
edition = "2018"

[dependencies]
rpi_led_common = { path = "../rpi_led_common" }
structopt = "^0.3.21"
crossterm = "^0.19.0"
tui = { version = "^0.14.0", default-features = false, features = ["crossterm"] }
cpal = "^0.13.1"
byteorder = "^1.4.2"
rbl_circular_buffer = "^0.1.2"
anyhow = "^1.0.38"
int-enum = "^0.4.0"
