[package]
name = "rpi_led_remote"
version = "0.1.0"
authors = ["Lucas Malandrino <lucas.malandrino@gmail.com>"]
edition = "2018"

[dependencies]
rpi_led_common = { path = "../rpi_led_common" }
structopt = "^0.3.21"
crossterm = "^0.19.0"
tui = { version = "^0.14.0", default-features = false, features = ["crossterm"] }
cpal = "^0.13.1"
byteorder = "^1.4.2"
parking_lot = "^0.11.1"
ringbuf = "^0.2.3"
rustfft = "^5.0.1"
anyhow = "^1.0.38"
