[package]
name = "rswave_remote"
version = "0.1.0"
authors = ["Lucas Malandrino <lucas.malandrino@gmail.com>"]
edition = "2018"

[dependencies]
rswave_common = { path = "../rswave_common" }

structopt = "^0.3.21"
crossterm = "^0.19.0"
tui = { version = "^0.14.0", default-features = false, features = ["crossterm"] }
anyhow = "^1.0.38"
parking_lot = "^0.11.1"
tokio = { version = "^0.2", features = ["parking_lot", "rt-core", "macros"] }

cpal = "^0.13.2"
ringbuf = "^0.2.3"
realfft = "^1.1.0"
rspotify = "^0.10.0"
