[package]
name = "rswave_server"
version = "0.1.0"
authors = ["Lucas Malandrino <lucas.malandrino@gmail.com>"]
edition = "2018"
default-run = "rswave_server"

[features]
default = ["controller_ws2811"]
controller_ws2811 = ["rs_ws281x"]

[dependencies]
rswave_common = { path = "../rswave_common" }
rs_ws281x = { version = "^0.4.2", optional = true }
cichlid = "^0.2.1"

structopt = "^0.3.21"
anyhow = "^1.0.38"
log = "^0.4.14"
env_logger = "^0.8.2"
enum_dispatch = "0.3.5"
single_value_channel = "1.2.2"
